--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Hispanico
-  description: Install and manage Mariadb 10.2 rules
+  description: Install and manage Mariadb rules
   license: GPLv3
 
   min_ansible_version: 1.2
