--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,10 +30,11 @@
     - mariadb
 
 - name: Ensure mariadb root password is set
+  when:
+    - not ansible_check_mode
   mysql_user:
     name: root
     password: "{{ mariadb_root_pw }}"
-  check_mode: no
   tags:
     - configure
     - mariadb
