--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,6 +30,8 @@
     - mariadb
 
 - name: Ensure mariadb root password is set
+  when:
+    - not ansible_check_mode
   mysql_user:
     name: root
     password: "{{ mariadb_root_pw }}"
@@ -46,6 +48,8 @@
     mode: 0600
 
 - name: Ensure anonymous mariadb user is absent
+  when:
+    - not ansible_check_mode
   mysql_user:
     name: ''
     host_all: yes
@@ -55,6 +59,8 @@
     - mariadb
 
 - name: Ensure mariadb test database is absent
+  when:
+    - not ansible_check_mode
   mysql_db:
     name: test
     state: absent
@@ -63,6 +69,8 @@
     - mariadb
 
 - name: Create Databases
+  when:
+    - not ansible_check_mode
   mysql_db:
     name: "{{ item.key }}"
     state: present
@@ -72,6 +80,8 @@
     - mariadb
 
 - name: Create Users
+  when:
+    - not ansible_check_mode
   mysql_user:
     name: "{{ item.value.db_user_name }}"
     password: "{{ item.value.db_user_passwd }}"
